// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkTN_TSV9DataRow() -  BookID tests -  should find wrong book ID 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "expected 'GEN'",
      "excerpt": "RUT",
      "fieldName": "Book",
      "location": " from test line",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "o7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "o7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  GL Note tests -  should find bad ellipse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "characterIndex": 11,
      "excerpt": "…ad ellipse...",
      "fieldName": "GLQuote",
      "location": " from test line",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Occurrence Note tests -  should find empty note 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "n7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Missing OccurrenceNote field",
      "priority": 274,
      "rowID": "n7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Occurrence Note tests -  should find white space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "m7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Field is only whitespace",
      "priority": 373,
      "rowID": "m7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  invalid Original Language 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " from test line",
      "message": "Missing occurrence field when we have an original quote",
      "priority": 750,
      "rowID": "f2mg",
    },
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " from test line",
      "message": "Missing occurrence field",
      "priority": 791,
      "rowID": "f2mg",
    },
  ],
  "suggestion": "GEN	1	1	f2mg		0	1		In the beginning, God created the heavens and the earth “This is about how God made the heavens and the earth in the beginning.” This statement summarizes the rest of the chapter. Some languages translate it as “A very long time ago God created the heavens and the earth.” Translate it in a way that shows this actually happened and is not just a folk story.",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail to find OrigLang Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "וְ⁠חֹ֖שֶךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "b7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "b7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with leading space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "␣וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected leading space",
      "priority": 109,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "(ּ=D1468/H5bc) וְ⁠חֹ֖שֶׁךְ occurrence=1",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Seems original language quote might not start at the beginning of a word",
      "priority": 909,
      "rowID": "e7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "e7qw",
    },
  ],
  "suggestion": "GEN	1	2	e7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with leading word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "‼וְ‼חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected leading word-joiner",
      "priority": 770,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'word joiner'",
      "excerpt": "⁠וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "g7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "g7qw",
    },
  ],
  "suggestion": "GEN	1	2	g7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with leading zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "‼וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected leading zero-width joiner",
      "priority": 771,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'zero-width joiner'",
      "excerpt": "‍וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "k7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "k7qw",
    },
  ],
  "suggestion": "GEN	1	2	k7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with leading zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "‌וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "i7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "i7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with trailing space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "excerpt": "⁠חֹ֖שֶׁךְ␣",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected trailing space(s)",
      "priority": 95,
      "rowID": "f7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "f7qw",
    },
  ],
  "suggestion": "GEN	1	2	f7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with trailing word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "וְ‼חֹ֖שֶׁךְ‼",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected trailing word-joiner",
      "priority": 772,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'word joiner'",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ⁠",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "h7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "h7qw",
    },
  ],
  "suggestion": "GEN	1	2	h7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with trailing zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‼",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unexpected trailing zero-width joiner",
      "priority": 773,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'zero-width joiner'",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‍",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "l7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "l7qw",
    },
  ],
  "suggestion": "GEN	1	2	l7qw	figs-imperative	וְ⁠חֹ֖שֶׁךְ	1	Darkness	This is a command. By commanding that light should exist, God made it exist. (See: [[rc://*/ta/man/translate/figs-imperative]])",
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with trailing zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "verse text ◗וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃◖",
      "excerpt": "וְ⁠חֹ֖שֶׁךְ‌",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "j7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "j7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should fail with valid but high occurrence number 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "2",
      "bookID": "MAT",
      "details": "occurrence=2 but only 1 occurrence found, passage ◗λέγοντες, ποῦ ἐστιν ὁ τεχθεὶς Βασιλεὺς τῶν Ἰουδαίων? εἴδομεν γὰρ αὐτοῦ τὸν ἀστέρα ἐν τῇ ἀνατολῇ καὶ ἤλθομεν προσκυνῆσαι αὐτῷ.◖",
      "excerpt": "προσκυνῆσαροσκυνῆσαι",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Unable to find duplicate original language quote in verse text",
      "priority": 917,
      "rowID": "v248",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  Original Quote tests -  should find missing Original Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "a7qw",
    },
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "a7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  SupportReference tests -  should find long SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "not 5",
      "excerpt": "r7q33",
      "fieldName": "ID",
      "location": " from test line",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "r7q33",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "r7q33",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  SupportReference tests -  should find missing SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Verse",
      "location": " from test line",
      "message": "Missing row ID field",
      "priority": 931,
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  SupportReference tests -  should find short SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "not 3",
      "excerpt": "q7q",
      "fieldName": "ID",
      "location": " from test line",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "q7q",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "q7q",
    },
  ],
  "suggestion": undefined,
}
`;

exports[`checkTN_TSV9DataRow() -  TSV format tests -  empty line should fail 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  TSV format tests -  should fail not TSV 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  TSV format tests -  should find wrong row count 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 8 fields",
      "location": " from test line",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=2, right=1",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=0, right=1",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=2",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail double broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=2, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail double broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "left=0, right=2",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail if SupportReference link differs from link in OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "excerpt": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "details": "need to carefully check \\"[[rc://*/ta/man/figs-parallelism]]\\"",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [[ ]] link(s)—not a recognized TA or TW link",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid doublet link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "characterIndex": 170,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "gnn5",
    },
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "need to carefully check \\"[Doublet](../figs-doublet/01.md)\\"",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [ ]( ) link(s)—not a recognized Bible or TA, TN, or TW link",
      "priority": 648,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid first link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "characterIndex": 235,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "unfoldingWord en_ta master translate/figs-activepassivez/01.md",
      "excerpt": "[[rc://*/ta/man/translate/figs-activepassivez]]",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line translate/figs-activepassivez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-activepassivez/01.md",
      "message": "Error loading TA article",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "characterIndex": 287,
      "excerpt": "…nd [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "SR='figs-activepassive'—found 2 TA links",
      "excerpt": "[\\"figs-activepassivez\\",\\"figs-imperative\\"]",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Should have a SupportReference when OccurrenceNote has a TA link",
      "priority": 789,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid link path 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "7",
      "bookID": "GEN",
      "details": "need to carefully check \\"[[rc://*/ta/woman/figs-imperative]]\\"",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [[ ]] link(s)—not a recognized TA or TW link",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid second link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "characterIndex": 235,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "characterIndex": 286,
      "excerpt": "…nd [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "unfoldingWord en_ta master translate/figs-imperativez/01.md",
      "excerpt": "[[rc://*/ta/man/translate/figs-imperativez]]",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line translate/figs-imperativez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-imperativez/01.md",
      "message": "Error loading TA article",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "SR='figs-activepassive'—found 2 TA links",
      "excerpt": "[\\"figs-activepassive\\",\\"figs-imperativez\\"]",
      "fieldName": "OccurrenceNote",
      "location": " from test line",
      "message": "Shouldn’t have multiple TA links in OccurrenceNote",
      "priority": 786,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid verse link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "need to carefully check \\"[Genesis 1:7](../01/zzz.md)\\"",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Unusual [ ]( ) link(s)—not a recognized Bible or TA, TN, or TW link",
      "priority": 648,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid verse link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=1, middle=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [ ]( ) link characters",
      "priority": 843,
      "rowID": "ha33",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=1, right=0",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched () characters",
      "priority": 563,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  link tests -  should fail invalid verse link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "left=0, right=1",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Mismatched [] characters",
      "priority": 563,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  should find invalid Book ID, chapter number, ID, SupportReference, quotes, OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "expected 'GEN'",
      "excerpt": "GIN",
      "fieldName": "Book",
      "location": " from test line",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "expected '1'",
      "excerpt": "200",
      "fieldName": "Chapter",
      "location": " from test line",
      "message": "Wrong chapter number",
      "priority": 976,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "200",
      "fieldName": "Chapter",
      "location": " from test line",
      "message": "Invalid large chapter number",
      "priority": 823,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "expected '2'",
      "excerpt": "9",
      "fieldName": "Verse",
      "location": " from test line",
      "message": "Wrong verse number",
      "priority": 975,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Verse",
      "location": " from test line",
      "message": "Unable to check verse number",
      "priority": 812,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "not 5",
      "excerpt": "W-3r5",
      "fieldName": "ID",
      "location": " from test line",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Only 'Just-In-Time Training' TA articles allowed here",
      "priority": 788,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line translate/Laugh/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "excerpt": "17",
      "fieldName": "Occurrence",
      "location": " from test line",
      "message": "Invalid occurrence field",
      "priority": 792,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "excerpt": "…ad ellipse...",
      "fieldName": "GLQuote",
      "location": " from test line",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 7,
      "excerpt": "Boo hoo,,",
      "fieldName": "OccurrenceNote",
      "lineNumber": 2,
      "location": " from test line",
      "message": "Unexpected doubled , characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 12,
      "excerpt": "…st my shoe !",
      "fieldName": "OccurrenceNote",
      "lineNumber": 3,
      "location": " from test line",
      "message": "Unexpected ! character after space",
      "priority": 191,
      "rowID": "W-3r5",
    },
  ],
  "suggestion": "GIN	200	9	W-3r5	Laugh		1	Bad ellipse...	<br>Boo hoo,,<br> lost my shoe !",
}
`;

exports[`checkTN_TSV9DataRow() -  should find invalid SupportReference and missing quotes 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Only 'Just-In-Time Training' TA articles allowed here",
      "priority": 788,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "details": "linked from TN SupportReference",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line translate/Laugh/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading TA article",
      "priority": 888,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "excerpt": "Laugh",
      "fieldName": "SupportReference",
      "location": " from test line",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " from test line",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  should find language code instead of asterisk 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "characterIndex": 90,
      "details": "not 'en'",
      "excerpt": "…e: [[rc://en/ta/man/…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "Resource container link should have '*' language code",
      "priority": 450,
      "rowID": "u7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  should find mismatched bookId 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "expected 'GEN'",
      "excerpt": "EXO",
      "fieldName": "Book",
      "location": " from test line",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "t7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "t7qw",
    },
  ],
}
`;

exports[`checkTN_TSV9DataRow() -  should find mismatched chapter verse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "expected '22'",
      "excerpt": "2",
      "fieldName": "Chapter",
      "location": " from test line",
      "message": "Wrong chapter number",
      "priority": 976,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "expected '33'",
      "excerpt": "3",
      "fieldName": "Verse",
      "location": " from test line",
      "message": "Wrong verse number",
      "priority": 975,
      "rowID": "s7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "characterIndex": 90,
      "excerpt": "…e: [[rc://*/ta/man/t…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " from test line",
      "message": "tC cannot yet process '*' language code",
      "priority": 950,
      "rowID": "s7qw",
    },
  ],
}
`;
